SDKs/twilio.com/twilio_bulkexports_v1/1.37.4/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()
    
    req := operations.CreateExportCustomJobRequest{
        Security: operations.CreateExportCustomJobSecurity{
            AccountSidAuthToken: shared.SchemeAccountSidAuthToken{
                Password: "YOUR_PASSWORD_HERE",
                Username: "YOUR_USERNAME_HERE",
            },
        },
        PathParams: operations.CreateExportCustomJobPathParams{
            ResourceType: "sit",
        },
        Request: &operations.CreateExportCustomJobCreateExportCustomJobRequest{
            Email: "voluptas",
            EndDay: "culpa",
            FriendlyName: "expedita",
            StartDay: "consequuntur",
            WebhookMethod: "dolor",
            WebhookURL: "expedita",
        },
    }
    
    res, err := s.CreateExportCustomJob(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.BulkexportsV1ExportExportCustomJob != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `CreateExportCustomJob`
* `DeleteJob`
* `FetchDay` - Fetch a specific Day.
* `FetchExport` - Fetch a specific Export.
* `FetchExportConfiguration` - Fetch a specific Export Configuration.
* `FetchJob`
* `ListDay` - Retrieve a list of all Days for a resource.
* `ListExportCustomJob`
* `UpdateExportConfiguration` - Update a specific Export Configuration.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
